# Alucard

./: .gitignore  Alucard.cpp  CMakeLists.txt  README.md
Daemon/: Daemon.hpp
Daemon/DaemonComponents/: Banner.hpp  daemonLinkedList.hpp  daemonThread.hpp
Daemon/DaemonComponents/DaemonErrorcodes/: DaemonErrorCode.hpp
cmds/fileman/: fattr.h  fdebug.h  fileman.h
